--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2021"
 
 [dependencies]
 bit-set = "0.5.3"
+clap = { version = "4.4.6", features = ["derive"]}
 num = "0.4.0"
 queues = "1.1.0"
