--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,13 @@ bit-set = "0.5.3"
 clap = { version = "4.4.6", features = ["derive"]}
 num = "0.4.0"
 queues = "1.1.0"
+
+[dev-dependencies]
+criterion = "0.5.1"
+
+[profile.release]
+debug = true
+
+[[bench]]
+name = "d19"
+harness = false
